# marketing-demo

./: build_visualizer.py  index.html  main.py  pyproject.toml  visualizer.html
harbor_export/tasks/mkt_s1_product_launch/environment/: Dockerfile  pyproject.toml
harbor_export/tasks/mkt_s1_product_launch/environment/gym/domains/marketing/s1_product_launch/: dag.md  rubrics.yaml  verifiers.py
harbor_export/tasks/mkt_s1_product_launch/environment/gym/domains/marketing/s1_product_launch/inputs/chat/: 01_gtm_launch_channel.yaml  02_connor_pressure_dm.yaml
harbor_export/tasks/mkt_s1_product_launch/environment/gym/domains/marketing/s1_product_launch/inputs/docs/: landing_page_copy_v1.md  press_release_draft_v1.md  substantiation_library_index.md
harbor_export/tasks/mkt_s1_product_launch/environment/gym/domains/marketing/s1_product_launch/inputs/emails/: 01_linh_slip_notice.md  02_priyanka_kickoff.md  03_devika_workflow_reminder.md
harbor_export/tasks/mkt_s1_product_launch/environment/gym/domains/marketing/s1_product_launch/inputs/sheets/: claims_tracker_v1.xlsx  hubspot_campaigns_scheduled.csv  original_gtm_calendar.csv
harbor_export/tasks/mkt_s1_product_launch/environment/gym_core/: rubric_schema.py  verifier_base.py
harbor_export/tasks/mkt_s1_product_launch/environment/gym_runtime/: __init__.py  session.py
harbor_export/tasks/mkt_s1_product_launch/environment/gym_runtime/harness/: base.py  dummy.py  openai.py
harbor_export/trajectories/: mkt_s1_product_launch__gpt-5.4.atif.json  mkt_s1_product_launch__gpt-5.4__discovery_run1.atif.json  (+9 more)
(+97 files in other folders)
